--- a/package.json
+++ b/package.json
@@ -2,17 +2,23 @@
   "name": "web-components",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "files": [
     "dist",
-    "src"
+    "src/components/"
   ],
-  "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/web-components.umd.cjs",
+  "module": "./dist/web-components.js",
   "exports": {
-    ".": "./dist/index.js",
-    "./package.json": "./package.json"
+    ".": {
+      "import": "./dist/web-components.js",
+      "require": "./dist/web-components.umd.cjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./dist/style.css": {
+      "import": "./dist/style.css",
+      "require": "./dist/style.css"
+    }
   },
   "scripts": {
     "dev": "vite",
@@ -28,21 +34,16 @@
     "build-storybook": "storybook build -o ./dist",
     "build-storybook-docs": "storybook build --docs"
   },
-  "dependencies": {
-    "sass": "^1.70.0",
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+  "peerDependencies": {
+    "vue": "^3.4.15"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "vite-plugin-dts": "^3.7.3",
     "@rushstack/eslint-patch": "^1.3.3",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-styling": "^2.0.0",
+    "@storybook/addon-styling": "^1.3.7",
     "@storybook/addon-themes": "^7.6.17",
     "@storybook/blocks": "^7.6.17",
     "@storybook/manager-api": "^7.6.17",
@@ -52,7 +53,6 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.10",
     "@vitejs/plugin-vue": "^5.0.3",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
@@ -65,14 +65,11 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^4.12.0",
-    "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-vue": "^6.0.0",
     "storybook": "^7.6.17",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "sass": "^1.70.0"
   }
 }
