--- a/package.json
+++ b/package.json
@@ -38,12 +38,10 @@
     "vue": "^3.4.15"
   },
   "devDependencies": {
-    "vite-plugin-dts": "^3.7.3",
     "@rushstack/eslint-patch": "^1.3.3",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
     "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-styling": "^1.3.7",
     "@storybook/addon-themes": "^7.6.17",
     "@storybook/blocks": "^7.6.17",
     "@storybook/manager-api": "^7.6.17",
@@ -65,11 +63,12 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.70.0",
     "storybook": "^7.6.17",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
-    "vue-tsc": "^1.8.27",
-    "sass": "^1.70.0"
+    "vite-plugin-dts": "^3.7.3",
+    "vue-tsc": "^1.8.27"
   }
 }
