--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+.yarn
+yarn.lock
 
 node_modules
 .DS_Store
@@ -18,7 +20,6 @@ coverage
 /cypress/screenshots/
 
 # Editor directories and files
-!.vscode/extensions.json
 .idea
 *.suo
 *.ntvs*
