--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
     "vite": "^5.0.11",
     "vite-plugin-dts": "^3.7.3",
     "vue-tsc": "^1.8.27"
+  },
+  "dependencies": {
+    "vite-svg-loader": "^5.1.0"
   }
 }
