--- a/package.json
+++ b/package.json
@@ -70,9 +70,7 @@
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
     "vite-plugin-dts": "^3.7.3",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^1.8.27"
-  },
-  "dependencies": {
-    "vite-svg-loader": "^5.1.0"
   }
 }
