add: prepare action in package.json

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "storybook": "storybook dev -p 6006",
     "storybook-docs": "storybook --docs --no-manager-cache",
     "build-storybook": "storybook build -o ./dist",
-    "build-storybook-docs": "storybook build --docs"
+    "build-storybook-docs": "storybook build --docs",
+    "prepare": "npm run build"
   },
   "peerDependencies": {
     "vue": "^3.4.15"
