--- a/package.json
+++ b/package.json
@@ -33,27 +33,27 @@
     "storybook-docs": "storybook --docs --no-manager-cache",
     "build-storybook": "storybook build -o ./dist",
     "build-storybook-docs": "storybook build --docs",
-    "prepare": "npm run build"
+    "prepare": "husky && npm run build"
   },
   "peerDependencies": {
-    "vue": "^3.4.15"
+    "vue": "^3.4.22"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-themes": "^7.6.17",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/manager-api": "^7.6.17",
-    "@storybook/test": "^7.6.17",
-    "@storybook/vue3": "^7.6.17",
-    "@storybook/vue3-vite": "^7.6.17",
+    "@rushstack/eslint-patch": "^1.10.2",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/addon-interactions": "^8.0.8",
+    "@storybook/addon-links": "^8.0.8",
+    "@storybook/addon-themes": "^8.0.8",
+    "@storybook/blocks": "^8.0.8",
+    "@storybook/manager-api": "^8.0.8",
+    "@storybook/test": "^8.0.8",
+    "@storybook/vue3": "^8.0.8",
+    "@storybook/vue3-vite": "^8.0.8",
     "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.11.10",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
+    "@types/node": "^20.12.7",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.49.0",
@@ -65,16 +65,14 @@
     "prettier-plugin-tailwindcss": "^0.5.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.70.0",
-    "storybook": "^7.6.17",
+    "sass": "^1.75.0",
+    "storybook": "^8.0.8",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
-    "vite": "^5.0.11",
-    "vite-plugin-dts": "^3.7.3",
+    "vite": "^5.2.8",
+    "vite-plugin-dts": "3.7.3",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^1.8.27"
-  },
-  "dependencies": {
-    "storybook-addon-vue-slots": "^0.9.29"
+    "vue-tsc": "^2.0.13",
+    "husky": "^9.0.10"
   }
 }
