--- a/package.json
+++ b/package.json
@@ -1,25 +1,11 @@
 {
   "name": "web-components",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.1.0",
+  "private": false,
   "type": "module",
   "files": [
-    "dist",
-    "src/components/"
+    "dist/"
   ],
-  "main": "./dist/web-components.umd.cjs",
-  "module": "./dist/web-components.js",
-  "exports": {
-    ".": {
-      "import": "./dist/web-components.js",
-      "require": "./dist/web-components.umd.cjs",
-      "types": "./dist/index.d.ts"
-    },
-    "./dist/style.css": {
-      "import": "./dist/style.css",
-      "require": "./dist/style.css"
-    }
-  },
   "scripts": {
     "dev": "vite",
     "rollup": "rollup -c",
@@ -59,6 +45,8 @@
     "eslint": "^8.49.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-vue": "^9.17.0",
+    "glob": "^10.3.12",
+    "husky": "^9.0.10",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
@@ -68,11 +56,10 @@
     "sass": "^1.75.0",
     "storybook": "^8.0.8",
     "tailwindcss": "^3.4.1",
-    "typescript": "~5.3.0",
+    "typescript": "~5.4.0",
     "vite": "^5.2.8",
-    "vite-plugin-dts": "3.7.3",
+    "vite-plugin-dts": "3.8.3",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^2.0.13",
-    "husky": "^9.0.10"
+    "vue-tsc": "^2.0.13"
   }
 }
