feature: vite plugin

--- a/tsconfig.vite.json
+++ b/tsconfig.vite.json
@@ -1,11 +1,17 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "exclude": ["src/**/__tests__/*"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "lib"],
+  "exclude": ["src/**/__tests__/*", "src/**/*.stories.ts"],
   "compilerOptions": {
     "composite": true,
+    "declaration": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["node"]
   }
 }
