--- a/package.json
+++ b/package.json
@@ -2,23 +2,17 @@
   "name": "web-components",
   "version": "1.1.0",
   "private": false,
+  "sideEffects": [
+    "*.vue",
+    "*.css"
+  ],
   "type": "module",
   "files": [
-    "dist/"
+    "dist",
+    "dist/src"
   ],
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/src/index.d.ts"
-    },
-    "./dist/style.css": {
-      "import": "./dist/style.css",
-      "require": "./dist/style.css"
-    }
-  },
+  "main": "./dist/lib/main.js",
+  "types": "./dist/lib/main.d.ts",
   "scripts": {
     "dev": "vite",
     "rollup": "rollup -c",
@@ -58,7 +52,6 @@
     "eslint": "^8.49.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-vue": "^9.17.0",
-    "glob": "^10.3.12",
     "husky": "^9.0.10",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.35",
