--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "storybook-docs": "storybook --docs --no-manager-cache",
     "build-storybook": "storybook build -o ./dist",
     "build-storybook-docs": "storybook build --docs",
-    "prepare": "husky && npm run build"
+    "prepare": "husky && npm run build",
+    "generate-icon-types": "npx tsx src/shared/generate-icon-types.ts"
   },
   "eslintConfig": {
     "root": true,
@@ -69,6 +70,7 @@
     "sass": "^1.77.4",
     "storybook": "^8.1.6",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.2",
     "typescript": "~5.4.5",
     "vite": "^5.2.13",
     "vite-plugin-dts": "3.9.1",
