--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -1,9 +1,8 @@
 name: Deploy prod
 
-# A version is denoted with a protected tag.
+# Trigger the workflow only for protected tags matching the specified pattern.
 on:
   push:
-    # Only tags which match the protected tag pattern will trigger this workflow
     tags:
       - v*.*.*
 
@@ -11,12 +10,13 @@ env:
   BUCKET_NAME: storybook-nolus
   CLOUDFRONT_ID: E213OV9IDTDHKX
   AWS_REGION: eu-west-1
+  ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
 jobs:
   build:
     name: Build static files
-    runs-on: ubuntu-latest
-    container: node:20.9.0
+    runs-on: ubuntu-22.04 # Use updated Ubuntu version for better compatibility
+    container: node:20.9.0 # Node.js container stays the same
 
     steps:
       - uses: actions/checkout@v3
@@ -34,8 +34,7 @@ jobs:
 
   deploy:
     name: Deploy to AWS
-    runs-on: ubuntu-latest
-    container: amazon/aws-cli
+    runs-on: ubuntu-22.04 # Updated runner for compatibility
     environment: production
     needs: build
 
@@ -59,8 +58,7 @@ jobs:
 
   invalidate-cache:
     name: Invalidate cache
-    runs-on: ubuntu-latest
-    container: amazon/aws-cli
+    runs-on: ubuntu-22.04 # Updated runner for compatibility
     environment: production
     needs: deploy
 
@@ -72,7 +70,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Invalidate cloudfront cache
+      - name: Invalidate CloudFront Cache
         run: |
           aws cloudfront create-invalidation --distribution-id ${CLOUDFRONT_ID} --paths "/*" --output table
           echo "Cache invalidation usually takes a couple of minutes"
