--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@storybook/addon-themes": "^10.0.2",
     "@storybook/vue3": "^10.0.2",
     "@storybook/vue3-vite": "^10.0.2",
+    "@tailwindcss/postcss": "^4.1.16",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.13.14",
     "@vitejs/plugin-vue": "^6.0.1",
