update tag version and remove lintings

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-components",
-  "version": "2.0.38",
+  "version": "2.0.39",
   "private": false,
   "sideEffects": [
     "*.vue",
@@ -16,11 +16,9 @@
   "scripts": {
     "dev": "vite",
     "rollup": "rollup -c",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "run-p \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
     "storybook-docs": "storybook --docs --no-manager-cache",
@@ -29,18 +27,10 @@
     "prepare": "husky && npm run build",
     "generate-icon-types": "npx tsx src/shared/generate-icon-types.ts"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true,
-      "vue/setup-compiler-macros": true
-    }
-  },
   "peerDependencies": {
     "vue": "^3.5.22"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.14.1",
     "@storybook/addon-links": "^10.0.2",
     "@storybook/addon-themes": "^10.0.2",
     "@storybook/vue3": "^10.0.2",
@@ -48,12 +38,8 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.13.14",
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.21",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.26.0",
     "husky": "^9.1.6",
     "npm-run-all2": "^6.2.0",
     "postcss": "^8.4.35",
