--- a/package.json
+++ b/package.json
@@ -52,9 +52,8 @@
     "tailwindcss": "^3.4.16",
     "tsx": "^4.19.2",
     "typescript": "~5.8.3",
-    "vite": "^5.4.9",
+    "vite": "^7.1.12",
     "vite-plugin-dts": "4.3.0",
-    "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^3.1.2"
+    "vite-svg-loader": "^5.1.0"
   }
 }
