--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-components",
-  "version": "2.0.41",
+  "version": "2.0.42",
   "private": false,
   "sideEffects": [
     "*.vue",
@@ -15,7 +15,6 @@
   "types": "./dist/lib/main.d.ts",
   "scripts": {
     "dev": "vite",
-    "rollup": "rollup -c",
     "build": "run-p \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -54,6 +53,7 @@
     "typescript": "~5.8.3",
     "vite": "^7.1.12",
     "vite-plugin-dts": "4.3.0",
-    "vite-svg-loader": "^5.1.0"
+    "vite-svg-loader": "^5.1.0",
+    "terser": "^5.44.0"
   }
 }
