--- a/package.json
+++ b/package.json
@@ -49,11 +49,14 @@
     "sass": "^1.82.0",
     "storybook": "^10.0.2",
     "tailwindcss": "^3.4.16",
+    "terser": "^5.44.0",
     "tsx": "^4.19.2",
     "typescript": "~5.8.3",
     "vite": "^7.1.12",
     "vite-plugin-dts": "4.3.0",
-    "vite-svg-loader": "^5.1.0",
-    "terser": "^5.44.0"
+    "vite-svg-loader": "^5.1.0"
+  },
+  "dependencies": {
+    "motion-v": "^1.9.0"
   }
 }
