--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue": "^3.5.22"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^10.2.8",
     "@storybook/addon-links": "^10.0.2",
     "@storybook/addon-themes": "^10.0.2",
     "@storybook/vue3": "^10.0.2",
