--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -9,6 +9,7 @@ jobs:
   release:
     name: Bump version and tag
     runs-on: ubuntu-22.04
+    if: "!startsWith(github.event.head_commit.message, 'chore: release v')"
     permissions:
       contents: write
 
@@ -18,25 +19,28 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Get current version
-        id: current
-        run: echo "version=$(node -p "require('./package.json').version")" >> "$GITHUB_OUTPUT"
-
-      - name: Bump patch version
-        id: bump
+      - name: Determine next version
+        id: next
         run: |
-          IFS='.' read -r major minor patch <<< "${{ steps.current.outputs.version }}"
-          new_version="${major}.${minor}.$((patch + 1))"
-          echo "version=${new_version}" >> "$GITHUB_OUTPUT"
+          current=$(node -p "require('./package.json').version")
+          IFS='.' read -r major minor patch <<< "$current"
+          next_patch=$((patch + 1))
+
+          # Skip past any tags that already exist
+          while git tag -l "v${major}.${minor}.${next_patch}" | grep -q .; do
+            next_patch=$((next_patch + 1))
+          done
+
+          echo "version=${major}.${minor}.${next_patch}" >> "$GITHUB_OUTPUT"
 
       - name: Update package.json version
-        run: npm version ${{ steps.bump.outputs.version }} --no-git-tag-version
+        run: npm version ${{ steps.next.outputs.version }} --no-git-tag-version
 
       - name: Commit and tag
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add package.json
-          git commit -m "chore: release v${{ steps.bump.outputs.version }}"
-          git tag "v${{ steps.bump.outputs.version }}"
+          git commit -m "chore: release v${{ steps.next.outputs.version }}"
+          git tag "v${{ steps.next.outputs.version }}"
           git push origin main --tags
