--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -17,7 +17,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Determine next version
         id: next
@@ -36,11 +35,19 @@ jobs:
       - name: Update package.json version
         run: npm version ${{ steps.next.outputs.version }} --no-git-tag-version
 
-      - name: Commit and tag
+      - name: Commit version bump
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add package.json
           git commit -m "chore: release v${{ steps.next.outputs.version }}"
-          git tag "v${{ steps.next.outputs.version }}"
-          git push origin main --tags
+          git push origin main
+
+      - name: Create GitHub release (creates the tag)
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create "v${{ steps.next.outputs.version }}" \
+            --target main \
+            --title "v${{ steps.next.outputs.version }}" \
+            --generate-notes
